Resovlved Animation Issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -120,7 +120,7 @@
   }
 }
 
-.skeleton {
+/* .skeleton {
   * {
     pointer-events: none !important;
   }
@@ -137,12 +137,12 @@
   .skeleton-div {
     @apply bg-foreground/20 animate-pulse;
   }
-}
+} */
 
 .ProseMirror {
   outline: none;
 }
 
-.suggestion-highlight {
+/* .suggestion-highlight {
   @apply bg-blue-200 hover:bg-blue-300 dark:hover:bg-blue-400/50 dark:text-blue-50 dark:bg-blue-500/40;
-}
+} */
